- Add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,14 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112164914-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-112164914-1');
+    </script>
   </body>
 </html>
